have many things to fix including font size, container text wrapping, etc

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Lobster');
+@import url('https://fonts.googleapis.com/css?family=Pacifico');
 
 /** {
   border: black 1px solid;
@@ -6,69 +7,106 @@
 
 /*All header CSS below*/
 header {
+  position: fixed;
+  display: block;
   background-color: #2A2B1D;
-  height: 100px
+  height: 10%;
+  width: 100%;
+  z-index: 2;
 
+}
+
+a:link {
+  color: #7C8A83;
+  text-decoration: none;
+}
+
+a:visited {
+    color: #7C8A83;
+}
+
+/* mouse over link */
+a:hover {
+    color: blue;
 }
 
 header h2,nav {
   display: inline-block;
 }
 
-header a[href*="index"] {
-  position: absolute;
-  left: 150px;
-  top: 35px;
-
+header ul {
+  list-style-type: none;
 }
 
-nav li {
-  list-style-type: none;
+header a[href*="index"] {
+  position: absolute;
+  font-size: auto;
+  left: 10%;
+  top: 40%;
 }
 
 nav a[href="#login"] {
   display: inline-block;
+  font-size: auto;
   position: absolute;
-  right: 200px;
-  top: 50px;
+  left: 80%;
+  top: 40%;
+
 }
 
 nav a[href="#signup"] {
   display: inline-block;
+  font-size: auto;
   position: absolute;
-  right: 300px;
-  top: 50px;
+  left: 90%;
+  top: 40%;
+
 }
 
 
 /*top meowspace section*/
-main section h1 {
+main section h1,img {
   display: block;
   margin-top: 0;
   margin-bottom: 0;
-  padding-top: 10%;
-  background-color: #DBCFC5;
-  height: 25rem;
+  width: 100%;
+  height: 25em;
+}
+
+main section h1 p:nth-of-type(1) {
+  position: absolute;
+  top: 30%;
+  right: 10%;
+  left: 10%;
+  z-index: 1;
+  font-size: 5em;
   text-align: center;
-  vertical-align: middle;
-  font-size: 1000%;
-  font-family: 'Lobster', cursive;
+  padding: 0, 0, 0, 0;
+  z-index: 1;
+  font-family: 'Pacifico', cursive;
+  color: #7C8A83;
+  opacity: 0.8;
 }
 
 /*for "popular posts"*/
 main h2:nth-of-type(1) {
   text-align: center;
-
 }
 
-article.container {
+/*popular post*/
+.post h2 {
+  margin-bottom: 4%;
+  font-size: 4em
+}
+
+.container {
   text-align: center;
   padding: 1%;
   display: inline-block;
   position: relative;
   background-color: #5C5755;
-  height: 23em;
-  width: 20rem;
+  height: 300px;
+  width: 25%;
   border-radius: 25px;
   padding: 0px;
   margin: 1% 2%;
@@ -76,66 +114,156 @@ article.container {
 }
 
 /*title container*/
-article.container h3 {
+.container h3 {
   background: #7C8A83;
   height: 20%;
-  width: 20rem;
+  width: 100%;
   margin: 0px;
   padding-top: 10%;
   text-align: center;
   border-top-right-radius: 25px;
   border-top-left-radius: 25px;
+  font-size: 1.4em;
 }
 
 /*article*/
-article h3 + p {
-  text-align: left;
-  margin: 8%;
+.container p {
+  display: block;
+  text-align: justify;
+  margin-top: 8%;
+  margin-left: 2em;
+  margin-right: 2em;
+  margin-bottom: 15%;
+  width: auto;
+  font-size: 20;
+  max-height: 1.9em;
 }
 
 /*learn more*/
 article p.learn {
+  display: block;
   position: absolute;
-  bottom: 10px;
-  right: 20px;
-  left: 60px;
-  width: 200px;
-  line-height: 3;
+  right: 50%;
+  left: 50%;
+  bottom: 0em;
+  margin-top: 5%;
+  margin-bottom: 0em;
+  margin-right: -50%;
+  margin-left: auto;
+  padding-bottom: 5%;
+  width: auto;
+  height: auto;
+  line-height: 3em;
   background-color: #B7D5B6;
   border-radius: 30px;
+  transform: translate(-50%, -50%);
+  text-align: center;
 }
 
-section.post {
+.post {
   height: 55em;
+  font-size: auto;
   text-align: center;
   background-color: #B7D5B6;
   padding-top: 5%;
   padding-bottom: 10%;
+  padding-left: 5%;
+  padding-right: 5%;
 }
 
-/*popular post*/
-section.post h2 {
-  margin-bottom: 4%;
-  font-size: 4em
-}
-
-section.club {
+.club {
   display: block;
   margin-top: 0;
   margin-bottom: 0;
-  padding-top: 10%;
-  padding-left: 5%;
-  padding-right: 5%;
+  padding-top: 1%;
+  padding-left: 12%;
+  padding-right: 12%;
   background-color: #DBCFC5;
-  height: 25rem;
-  text-align: center;
+  height: 20rem;
   vertical-align: middle;
   font-size: 25%;
 }
 
-section.club h2, p {
+.club h2, p, img {
+  padding: 0;
   display: inline-block;
-  /*width: 20px;*/
+  text-align: justify;
   float: left;
   clear: both;
+}
+
+/*join the club*/
+.club h2 {
+  position: absolute;
+  left: 20%;
+  font-size: 10em;
+  text-align: center;
+}
+
+/*"paragraph under join the club"*/
+.club p {
+  position: relative;
+  top: 3em;
+  font-size: 5em;
+  line-height: 1.2em;
+  max-width: 50%;
+  max-height: 20%;
+}
+
+/*cat on chair*/
+.club img {
+  position: absolute;
+  right: 15%;
+  max-height: 24%;
+  width: 30%;
+  height: auto;
+  margin-top: 3%;
+  margin-bottom: 3%;
+  float: right;
+  clear: both;
+}
+
+.everbody {
+  display: inline-block;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+/*"eveybody wants to be a cat!"*/
+.everybody h2 p {
+  position: absolute;
+  right: 10%;
+  left: 10%;
+  z-index: 1;
+  font-size: 70px;
+  text-align: center;
+  margin-top: 15%;
+  padding: 0, 0, 0, 0;
+  font-family: 'Pacifico', cursive;
+  opacity: 0.8;
+
+}
+
+.everybody img {
+  position: relative;
+  width: 100%;
+  height: 20em;
+  margin: 0;
+  padding: 0;
+}
+
+footer h4, p {
+  float: left;
+  width: 40%;
+  margin-left: 10%;
+  font-size: 0.5em
+}
+
+footer p {
+  position: relative;
+  top: 1em
+}
+
+footer nav {
+  float: right;
+  width: 40%;
 }
